<resources>
    <string name="app_name">LincRideApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="good_evening_john">Good Evening, John</string>
    <string name="destination">Destination</string>
    <string name="where_are_you">Where are you?</string>
    <string name="where_to">Where to?</string>

    <string name="pickup_location">Pickup Location</string>
    <string name="home">Home</string>
    <string name="dropoff_location">Dropoff Location</string>
    <string name="current_location">Current Location</string>
    <string name="ride_history">Ride History</string>
    <string name="request_ride">Request ride</string>
    <string name="no_ride_booking_yet">No ride booking yet</string>

    <string name="maps_api_key"></string>
</resources>