<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.PlacesScreen">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.LincRideApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_book_ride"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#FFFFFF"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.LincRideApp">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Book A Ride"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/llLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_book_ride"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <RelativeLayout
            android:id="@+id/llPickupLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dr_light_gray_rounded_6"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPickupLocation"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_location_pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imgPickupLocation"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text10RegularGray"
                    android:text="@string/pickup_location" />

                <EditText
                    android:id="@+id/edtPickUpAddress"
                    style="@style/Text12MediumBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/where_to"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true"
                    android:text="@string/current_location"
                    android:textColor="@color/colorBlue"
                    android:textColorHint="@color/colorTextHint" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/llDropLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llPickupLocation"
            android:layout_marginTop="10dp"
            android:background="@drawable/dr_light_gray_rounded_6"
            android:paddingVertical="12dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgDropLocation"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_drop_location_pin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imgDropLocation"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text10RegularGray"
                    android:text="@string/dropoff_location" />

                <EditText
                    android:id="@+id/edtPlaceAddress"
                    style="@style/Text12MediumBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:hint="@string/where_to"
                    android:imeOptions="actionDone"
                    android:selectAllOnFocus="true"
                    android:text=""
                    android:textColor="@color/colorBlue"
                    android:textColorHint="@color/colorTextHint" />

            </LinearLayout>

        </RelativeLayout>

>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnAcceptRideNew"
        style="@style/ButtonParentStyle"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLayout"
        android:layout_marginTop="40dp"
        android:text="@string/request_ride" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnRideHistory"
        style="@style/ButtonParentStyle"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAcceptRideNew"
        android:layout_marginTop="10dp"
        android:text="Ride history" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRideHistory"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="4"
        tools:listitem="@layout/listrow_other_places"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPickupSearchAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvSearchAddress"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="4"
        tools:listitem="@layout/listrow_other_places"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>