<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.MapScreen">

    <fragment
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/llBottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />


    <LinearLayout
        android:id="@+id/llBottomView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_alignParentBottom="true"
        android:background="@drawable/dr_blue_corner_top_20"
        android:clickable="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="4dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp"
                android:src="@drawable/dr_dark_gray_line_30" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGoodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/good_evening_john" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dr_white_corner_top_20"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="10dp">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dr_light_gray_rounded"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgSearch"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_search_blue" />

                <LinearLayout
                    android:id="@+id/llWhereTo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/imgMice"
                    android:layout_toEndOf="@+id/imgSearch"
                    android:orientation="vertical"
                    android:paddingHorizontal="12dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Text10RegularGray"
                        android:text="@string/destination" />

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/Text12MediumBlack"
                        android:text="@string/where_to" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgMice"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_mice"
                    android:visibility="gone"/>

            </RelativeLayout>



        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>